Tidied dependencies and updated URL in package.json. Added favicon and touch icon. Added webapp metadata to index.html as well as updaing description and outhor.

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html>
     <head>
-	   <meta charset='utf-8'>
-	   <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1'>
-	   <title>Name That Blue</title>
-       <link rel="stylesheet" type="text/css" href="css/app.css" />
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Name That Blue</title>
+        <meta name="description" content="How well do you know your shades of blue? Test your ability to identify the colours of popular brands and companies with this never ending quiz.">
+        <meta name="author" content="Colin Gourlay">
+        <meta name="HandheldFriendly" content="True">
+        <meta name="MobileOptimized" content="320">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <meta http-equiv="cleartype" content="on">
+        <meta name="msapplication-TileImage" content="/touch/apple-touch-icon.png">
+        <meta name="msapplication-TileColor" content="#3A6D9B">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black">
+        <meta name="apple-mobile-web-app-title" content="Name That Blue">
+        <link rel="stylesheet" type="text/css" href="css/app.css" />
     </head>
     <body>
         <script src="js/app.js"></script>
+        <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-44839444-1', 'namethatblue.com');ga('send', 'pageview');
+        </script>
     </body>
 </html>
