Renamed nav toggle element. Added check for standalone mode. Changed iOS status bar style to use app backround color, then tweaked nav style to stop it falling behind status bar in standalone mode.

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <meta name="msapplication-TileImage" content="/touch/apple-touch-icon.png">
         <meta name="msapplication-TileColor" content="#3A6D9B">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="apple-mobile-web-app-title" content="Name That Blue">
         <link rel="stylesheet" type="text/css" href="css/app.css" />
     </head>
