Added bugsense snippet.

--- a/src/index.html
+++ b/src/index.html
@@ -26,5 +26,9 @@
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
         ga('create', 'UA-44839444-1', 'namethatblue.com');ga('send', 'pageview');
         </script>
+        <script src="http://www.bugsense.com/static/js/global/bugsense.js" type='text/javascript'></script>
+        <script type="text/javascript">
+        var bugsense = new Bugsense( { apiKey: '3d36a325' } );
+        </script>
     </body>
 </html>
