--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Name That Blue</title>
-        <meta name="description" content="How well do you know your shades of blue? Test your ability to identify the colours of popular brands and companies with this never ending quiz.">
+        <meta name="description" content="How well do you know your shades of blue? Test your ability to identify the colours of popular brands, companies and lots of other stuff with this never ending quiz.">
         <meta name="author" content="Colin Gourlay">
         <meta name="HandheldFriendly" content="True">
         <meta name="MobileOptimized" content="320">
